--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "debug": "~2.2.0",
     "express": "~4.13.1",
     "jade": "~1.11.0",
+    "mailchimp-api-v3": "^1.7.0",
     "morgan": "~1.6.1",
     "nunjucks": "^3.0.1",
     "request": "^2.81.0",
