--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "morgan": "~1.6.1",
     "nunjucks": "^3.0.1",
     "request": "^2.81.0",
-    "serve-favicon": "~2.3.0"
+    "serve-favicon": "~2.3.0",
+    "twitter": "^1.7.1"
   }
 }
